# yt-napari

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  lint_requirements.txt  make.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feedback-and-discussion.md  not-a-bug-.md  other-issue.md
.github/workflows/: check_build.yml  check_manifest.yml  create_gh_release.yml  style_checks.yml  test_and_deploy.yml  weekly_build.yml
.napari/: DESCRIPTION.md
docs/: conf.py  funding.rst  help.rst  index.rst  installation.rst  notebooks.rst  quickstart.rst  schema.rst  tutorials.rst
docs-src/source/: yt_napari.rst
docs/_static/: yt-napari_0.0.1.json  yt-napari_0.0.2.json  yt-napari_0.3.0.json  yt-napari_0.4.0.json  yt-napari_0.5.0.json  yt-napari_latest.json
docs/examples/: PhasePlotTempExample.ipynb  ytnapari_scene_01_intro.ipynb  ytnapari_scene_02_linking_layers.ipynb  ytnapari_scene_03_slices.ipynb  ytnapari_scene_04_timeseries.ipynb  ytnapari_scene_05_timeseries_dask.ipynb  ytnapari_to_yt.ipynb
docs/source/: modules.rst  yt_napari.rst  yt_napari.schemas.rst  yt_napari.timeseries.rst  yt_napari.viewer.rst
examples/: ytnapari_scene.ipynb  ytnapari_scene_01_intro.ipynb  ytnapari_scene_02_linking_layers.ipynb
repo_utilities/: update_sample_data.py  update_schema_docs.py  validate.py
src/yt_napari/: ._model_ingestor.py.swp  __init__.py  _data_model.py  _ds_cache.py  _gui_utilities.py  _model_ingestor.py  _reader.py  _sample_data.py  _schema_version.py  _special_loaders.py  _types.py  _utilities.py  _widget_2d_plots.py  _widget_matadata.py  _widget_reader.py  config.py  logging.py  napari.yaml  timeseries.py  viewer.py
src/yt_napari/_tests/: _test_json.json  _test_json_2.json  _test_json_3.json  _test_json_slice.json  _test_json_timeseries.json  _test_json_timeseries_stack.json  conftest.py  test_config.py  test_covering_grid_json.py  test_ds_cache.py  test_gui_utilities.py  test_layers_to_yt.py  test_metadata_widget.py  test_model_ingestor.py  test_phaseplot_widget.py  test_reader.py  test_regions_json.py  test_sample_data.py  test_schema_manager.py  test_schema_version_comparisons.py  test_slices_json.py  test_timeseries.py  test_timeseries_json.py  test_viewer.py  test_widget_reader.py
src/yt_napari/sample_data/: _generic_loader.py  _sample_data.py  sample_cm1_tornado_lofs.json  sample_deeplynestedzoom.json  sample_enzo_64.json  sample_galaxyclustermerger.json  sample_gaussiancloud.json  sample_hiresisolatedgalaxy.json  sample_isolatedgalaxy.json  sample_popiii_mini.json  sample_registry.json  sample_smartstars.json
src/yt_napari/schemas/: _manager.py  _version_comparison.py  yt-napari_0.0.1.json  yt-napari_0.0.2.json
