[metadata]
name = yt-napari

author = Chris Havlin
author_email = chris.havlin@gmail.com
url = https://github.com/data-exp-lab/yt-napari
license = BSD-3-Clause
description = A napari plugin for loading data from yt
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/data-exp-lab/yt-napari/issues
    Documentation = https://github.com/data-exp-lab/yt-napari#README.md
    Source Code = https://github.com/data-exp-lab/yt-napari
    User Support = https://github.com/data-exp-lab/yt-napari/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
yt-napari = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    yt-napari = yt_napari:napari.yaml
