[metadata]
name = yt_napari
description = A napari plugin for loading data from yt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/data-exp-lab/yt-napari
author = Chris Havlin
author_email = chris.havlin@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
include_package_data = True
project_urls =
    Bug Tracker = https://github.com/data-exp-lab/yt-napari/issues
    Documentation = https://github.com/data-exp-lab/yt-napari#README.md
    Source Code = https://github.com/data-exp-lab/yt-napari
    User Support = https://github.com/data-exp-lab/yt-napari/issues

[options]
packages = find:
install_requires =
    magicgui>=0.6.1
    napari>=0.4.13
    npe2
    numpy
    pydantic
    yt>=4.0.1
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    yt-napari = yt_napari:napari.yaml

[options.extras_require]
full =
    dask[distributed,array]

[options.package_data]
yt_napari =
    napari.yaml
