[metadata]
name = yt-napari
description = A napari plugin for loading data from yt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/data-exp-lab/yt-napari
author = Chris Havlin
author_email = chris.havlin@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
include_package_data = True
project_urls =
    Bug Tracker = https://github.com/data-exp-lab/yt-napari/issues
    Documentation = https://github.com/data-exp-lab/yt-napari#README.md
    Source Code = https://github.com/data-exp-lab/yt-napari
    User Support = https://github.com/data-exp-lab/yt-napari/issues

[options]
packages = find:
install_requires =
    magicgui>=0.6.1
    napari>=0.4.19
    numpy
    packaging
    pydantic>2.0
    qtpy
    unyt
    yt>=4.0.1
python_requires = >=3.10
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    yt-napari = yt_napari:napari.yaml

[options.extras_require]
full =
    dask[distributed,array]
    pooch
    pandas
    yt[enzo]
docs =
    sphinx
    nbsphinx<0.8.8
    sphinx-jsonschema<1.19.0
    Jinja2<3.1.0
dev =
    pytest
    pytest-qt
    pytest-cov
    taskipy


[options.package_data]
yt_napari =
    napari.yaml
